# data-science-template

./: .gitignore  README.md  pyproject.toml  ruff.toml
documents/: README.md
notebooks/: 1 - Lab.ipynb  1_lab.ipynb  README.md
notebooks/examples/: 2_time_series_forecasting.ipynb
scripts/: README.md  install_rapids.sh
sql/: README.md  temporary.sql
utilities/: README.md
utilities/database/: README.md  oracle.py
utilities/email/: README.md  smtp_client.py  test_email.py
utilities/excel/: README.md  __init__.py  export_excel_with_style.py
utilities/server/: README.md  smb.py
