[project]
name = "dms-data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ace-tools>=0.0",
    "faker>=37.1.0",
    "fastexcel>=0.13.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "kagglehub[pandas-datasets]>=0.3.12",
    "matplotlib>=3.10.1",
    "numpy==1.26",
    "openpyxl>=3.1.5",
    "oracledb>=3.1.0",
    "pandas>=2.2.3",
    "pandas-profiling>=3.6.6",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "setuptools>=80.0.0",
    "smbprotocol>=1.15.0",
    "sqlalchemy>=2.0.40",
    "statsforecast>=2.0.1",
    "xlsxwriter>=3.2.2",
    "ydata-profiling>=4.12.2",
    # cuDF (GPU)
    "darts>=0.35.0",
    "cucim-cu12==25.2.*",
    "cudf-cu12==25.2.*",
    "cugraph-cu12==25.2.*",
    "cuml-cu12==25.2.*",
    "cuproj-cu12==25.2.*",
    "cuspatial-cu12==25.2.*",
    "cuvs-cu12==25.2.*",
    "cuxfilter-cu12==25.2.*",
    "dask-cudf-cu12==25.2.*",
    "nx-cugraph-cu12==25.2.*",
    "pylibraft-cu12==25.2.*",
    "raft-dask-cu12==25.2.*",
]
